--- a/res/menu/share_image_menu.xml
+++ b/res/menu/share_image_menu.xml
@@ -9,4 +9,9 @@
         android:showAsAction="ifRoom"
         android:title="Share"/>
 
+    <item android:id="@+id/action_download"
+          android:title="Download"
+          android:icon="@drawable/ic_action_download"
+          android:showAsAction="always"
+      />
 </menu>
